Mise en place des notifs
Trop de la balle les notifs :+1:
A faire : supprimer les réglages ou au moins les changer

--- a/Android/PolyFeeds/app/src/main/res/values/strings.xml
+++ b/Android/PolyFeeds/app/src/main/res/values/strings.xml
@@ -75,5 +75,10 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+    <string name="new_message_notification_title_template">Polyfeeds : %1$s</string>
+
+    <!-- TODO: remove this placeholder text -->
+    <string name="new_message_notification_placeholder_text_template">%1$s</string>
+
 
 </resources>
