--- a/Android/PolyFeeds/app/src/main/res/values/strings.xml
+++ b/Android/PolyFeeds/app/src/main/res/values/strings.xml
@@ -80,5 +80,16 @@
     <!-- TODO: remove this placeholder text -->
     <string name="new_message_notification_placeholder_text_template">%1$s</string>
 
+        <string name="ble_not_supported">BLE is not supported</string>
+        <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+        <string name="unknown_device">Unknown device</string>
+        <string name="title_devices">BLE Scan</string>
+
+        <!-- Menu items -->
+        <string name="menu_connect">Connect</string>
+        <string name="menu_disconnect">Disconnect</string>
+        <string name="menu_scan">Scan</string>
+        <string name="menu_stop">Stop</string>
+
 
 </resources>
